# gausplat-trainer

./: Cargo.toml  README.md
src/: lib.rs
src/config/scene/gaussian_3d/: mod.rs
src/dataset/: mod.rs
src/dataset/multiview/: mod.rs
src/dataset/multiview/camera/: cameras.rs  mod.rs
src/dataset/sparse_view/: mod.rs
src/dataset/sparse_view/camera/: cameras.rs  mod.rs
src/error/: mod.rs
src/function/: convert.rs
src/metric/: mae.rs  mdssim.rs  mod.rs  mse.rs  mssim.rs  psnr.rs
src/optimize/: adam.rs  learning_rate.rs  mod.rs
src/optimizer/: mod.rs
src/optimizer/gaussian_3d/: config.rs  mod.rs
src/range/: mod.rs
src/scene/gaussian_3d/: mod.rs
src/train/: mod.rs
src/train/gaussian_3d/: config.rs  loss.rs  mod.rs  optimize.rs  range.rs  refine.rs
src/train/gaussian_3d/optimize/: adam.rs  learning_rate.rs  mod.rs
src/update/gaussian_3d/: config.rs  mod.rs
src/updater/gaussian_3d/: config.rs  mod.rs
