[package]
description = "A library to train scenes for `gausplat`"
edition.workspace = true
license-file = "LICENSE"
name = "gausplat-trainer"
publish = false
readme = "README.md"
version.workspace = true

[dependencies]
gausplat-importer = {workspace = true}
gausplat-renderer = {workspace = true}

burn = {workspace = true, features = ["autodiff", "default"]}
dashmap = {workspace = true, features = ["rayon"]}
log = {workspace = true}
rayon = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
burn = {workspace = true, features = ["ndarray"]}
